--- a/cadastro.html
+++ b/cadastro.html
@@ -17,6 +17,7 @@
     <nav>
         <div class="container-2">
             <a href="index.html">Início</a>
+            <a href="busca.html">buscar serviço</a>
             <a href="cadastro.html">Cadastro</a>
             <a href="perfil.html">Perfil</a>
         </div>
