--- a/perfil.html
+++ b/perfil.html
@@ -14,7 +14,7 @@
     </header>
 
     <nav>
-        <div class="container">
+        <div class="container-2 ">
             <a href="index.html">Início</a>
             <a href="cadastro.html">Cadastro</a>
             <a href="busca.html">Buscar Serviços</a>
